--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,33 @@
           </excludes>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.42.0</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>apply</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <java>
+            <indent>
+              <tabs>true</tabs>
+              <spacesPerTab>4</spacesPerTab>
+            </indent>
+            <googleJavaFormat />
+            <trimTrailingWhitespace />
+            <endWithNewline />
+            <importOrder />
+            <removeUnusedImports />
+            <ratchetFrom>origin/main</ratchetFrom>
+          </java>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
