Change style from AOSP to GOOGLE

--- a/pom.xml
+++ b/pom.xml
@@ -131,8 +131,16 @@
         <configuration>
           <java>
             <googleJavaFormat>
-              <style>AOSP</style>
+              <style>GOOGLE</style>
             </googleJavaFormat>
+            <indent>
+              <tabs>true</tabs>
+              <spacesPerTab>2</spacesPerTab>
+            </indent>
+            <indent>
+              <spaces>true</spaces>
+              <spacesPerTab>4</spacesPerTab>
+            </indent>
             <trimTrailingWhitespace />
             <endWithNewline />
             <importOrder />
