--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,19 @@ spring:
   application:
     name: msa-museum-server
   datasource:
-    url: jdbc:postgresql://localhost:5432/msa_museum
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:mysql://localhost:3306/demodb
+    username: root
+    password: a2c4e6g8
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: update
     show-sql: true
+oss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: your-access-key-id
+    access-key-secret: your-access-key-secret
+    bucket-name: your-bucket-name
