--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,8 +13,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-oss:
-    endpoint: oss-cn-beijing.aliyuncs.com
-    access-key-id: your-access-key-id
-    access-key-secret: your-access-key-secret
-    bucket-name: your-bucket-name
+file:
+  storage:
+    disk: d://
+    location: msa-museum/files/
