init and finish coding

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,23 @@
 spring:
-  application:
-    name: msa-museum-server
   datasource:
-    url: jdbc:postgresql://localhost:5432/msa_museum
+    url: jdbc:postgresql://49.51.202.173:5432/msa_museum
     username: postgres
-    password: postgres
+    password: 20071028zhanG!
     driver-class-name: org.postgresql.Driver
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
+file:
+  storageLocation: C://upload/files
+  userAvatarLocation: C://upload/userAvatars
+  artifactAvatarLocation: C://upload/artifactAvatars
+
+
