--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
       <version>0.12.5</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+       <groupId>net.coobird</groupId>
+       <artifactId>thumbnailator</artifactId>
+       <version>0.4.17</version>
+    </dependency>
   </dependencies>
 
   <build>
