--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,7 @@ spring:
     name: msa-museum-server
   datasource:
     url: jdbc:postgresql://localhost:5432/msa_museum
-    username: postgres
-    password: postgres
+    username: xianxian
     driver-class-name: org.postgresql.Driver
   jpa:
     properties:
@@ -13,3 +12,5 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  security:
+    enabled: false
