--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: msa-museum-server
   datasource:
-    url: jdbc:postgresql://localhost:5432/msa_museum
+    url: jdbc:postgresql://49.51.202.173:5432/msa_museum
     username: postgres
-    password: postgres
+    password: 20071028zhanG!
     driver-class-name: org.postgresql.Driver
   jpa:
     properties:
@@ -14,8 +14,12 @@ spring:
       ddl-auto: update
     show-sql: true
 file:
-  storageLocation: C://upload/files
-  userAvatarLocation: C://upload/userAvatars
-  artifactAvatarLocation: C://upload/artifactAvatars
+  storageLocation: public/files
+  userAvatarLocation: public/userAvatars
+  artifactAvatarLocation: public/artifactAvatars
+
+  storageUrlBase: /files/
+  userAvatarUrlBase: /userAvatars/
+  artifactAvatarUrlBase: /artifactAvatars/
 
 
