头像压缩接口已完善（需要public/userAvatars这个文件夹）

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,12 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+file:
+  storageLocation: public/files
+  userAvatarLocation: public/userAvatars
+  artifactAvatarLocation: public/artifactAvatars
+
+  storageUrlBase: /files/
+  userAvatarUrlBase: /userAvatars/
+  artifactAvatarUrlBase: /artifactAvatars/
 
