Add basic authorization functions

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
     name: msa-museum-server
   datasource:
     url: jdbc:postgresql://localhost:5432/msa_museum
-    username: xianxian
+    username: postgres
+    password: _E{68ov~NK.9M1XK8+6yH3=;_hs9'P,+sVn9$ggK.}-$p;3Ls$
     driver-class-name: org.postgresql.Driver
   jpa:
     properties:
